# elect

./: .gitignore  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/components/forms/: DynamicFormComponent.jsx
frontend/src/pages/: DashboardPage.jsx  HomePage.jsx  LoginPage.jsx  RegistrationPage.jsx  SubmissionPage.jsx
frontend/src/routes/: ProtectedRoute.jsx  index.jsx
frontend/src/services/: authService.js  axiosConfig.js  formService.js
frontend/src/store/: authStore.js  formStore.js
observe/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
voting/: asgi.py  settings.py  urls.py  wsgi.py
